crates/celo-reth/tests/ui/fc_plus_native.stderr
error[E0308]: mismatched types
 --> tests/ui/fc_plus_native.rs:4:26
  |
4 |     let _ = Fc::new(1) + Native::new(2);
  |             ----------   ^^^^^^^^^^^^^^ expected `Fc`, found `Native`
  |             |
  |             expected because this is `Fc`
